deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  #namespace: reverse-proxy-nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: n0d3-1
      containers:
        - name: nginx
          #image: nginx:alpine
          image: josecarlosjr/nginx-controller-reverse-proxy
          ports:
            - containerPort: 80
              hostPort: 80
            - containerPort: 443
              hostPort: 443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: ssl
              mountPath: /etc/nginx/ssl
              readOnly: true
            - name: ssl-client
              mountPath: /etc/nginx/client
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: confnginx
        - name: ssl
          secret:
            secretName: proxy-ca-secret
        - name: ssl-client
          secret:
            secretName: client-ca
