service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-custom
  #namespace: reverse-proxy-nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: nginx
  - protocol: TCP
    port: 443
    targetPort: 443
    name: https
