ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: '*.mydomain.com'
    http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: nginx-custom
          servicePort: 80
